<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.spkt.nguyenducnguu.jobstore.NTD.NTDRegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/appcolor"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7">

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="50dp"
                android:background="@drawable/bg_back">

                <TextView
                    android:id="@+id/txt_back"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/fa_arrow_left"
                    android:textColor="@color/appcolor"
                    android:textSize="20dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_Title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="left|center"
                android:text="Chính sửa thông tin"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <Button
                android:id="@+id/btn_Finish"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/appcolor"
                android:text="Xong"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_icon1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fa_user"
                    android:textColor="@color/appcolor"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/edt_FullName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="4"
                    android:background="@drawable/edt_custom"
                    android:gravity="center|top|left"
                    android:hint="Trần Anh Sơn"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="2000"
                    android:maxLines="1"
                    android:scrollHorizontally="false"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/dark"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_icon2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fa_gender"
                    android:textColor="@color/appcolor"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/edt_Gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="4"
                    android:background="@drawable/edt_custom"
                    android:gravity="center|top|left"
                    android:hint="Nam"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="2000"
                    android:maxLines="1"
                    android:scrollHorizontally="false"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/dark"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_icon3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fa_company"
                    android:textColor="@color/appcolor"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/txt_CompanyName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="4"
                    android:background="@drawable/edt_custom"
                    android:gravity="center|top|left"
                    android:hint="HBB Solution"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="2000"
                    android:maxLines="2"
                    android:scrollHorizontally="false"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/dark"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_icon4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fa_address"
                    android:textColor="@color/appcolor"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/edt_Address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="4"
                    android:background="@drawable/edt_custom"
                    android:gravity="center|top|left"
                    android:hint="244 Cống Quỳnh, Phường Phạm Ngũ Lão, Quận 1, TP HCM"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="2000"
                    android:maxLines="5"
                    android:scrollHorizontally="false"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/dark"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_icon5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fa_phone"
                    android:textColor="@color/appcolor"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/edt_Phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="4"
                    android:background="@drawable/edt_custom"
                    android:gravity="center|top|left"
                    android:hint="01694043472"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="2000"
                    android:maxLines="1"
                    android:scrollHorizontally="false"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/dark"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_icon6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fa_link"
                    android:textColor="@color/appcolor"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/edt_Website"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="4"
                    android:background="@drawable/edt_custom"
                    android:gravity="center|top|left"
                    android:hint="https://hbbsolution.com"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="2000"
                    android:maxLines="5"
                    android:scrollHorizontally="false"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/dark"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_icon7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|top"
                    android:text="@string/fa_info"
                    android:textColor="@color/appcolor"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/edt_Decription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="4"
                    android:background="@drawable/edt_custom"
                    android:gravity="center|top|left"
                    android:hint="Giới thiệu công ty"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="2000"
                    android:maxLines="10"
                    android:scrollHorizontally="false"
                    android:textSize="15dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
