<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_Key"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imgv_Avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:src="@drawable/img_avatar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="[VNG] Tuyển lập trình viên Android"
                android:textColor="@color/appcolor" />

            <TextView
                android:id="@+id/txt_WorkPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tại: TP. HCM, Hà Nội"
                android:textColor="@color/appcolor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txt_icon1"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/fa_eye"
                        android:textColor="@color/orange"/>

                    <TextView
                        android:id="@+id/txt_Views"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="10"
                        android:textColor="@color/appcolor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txt_icon2"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/fa_userapply"
                        android:textColor="@color/orange"/>

                    <TextView
                        android:id="@+id/txt_NumberApply"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="9"
                        android:textColor="@color/appcolor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txt_icon3"
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/fa_clock"
                        android:textColor="@color/orange"/>

                    <TextView
                        android:id="@+id/txt_ExpirationTime"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="31/10/2017"
                        android:textColor="@color/appcolor" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>